--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html sin barreras</title>
-</head>
-<body>
 
+
+    <style>
+        body  { 
+            background-color: aqua;
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .alerta ¨{
+            background-color: seashell;
+            color: blanchedalmond;
+            font-size: 200%;
+            text-align: center;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 10px;
+            border: 2px;
+        }
+
+        .boton {
+            background-color: lime;
+            color: blanchedalmond;
+            border: none;
+            cursor: pointer;
+
+        }
+
+        .boton:hover {
+            background-color: lightgreen;
+            color: black;
+        }
+    </style>
+</head>
+
+
+<body>
+    
+
+    <h1>simulacion de daltonismo</h1>
+    <p> este texto debe ser legible con diferentes tipos de vision</p>
+
+    <div class="alerta">este es un mensaje importante</div>
+    <button class="boton">Aceptar</button>
     
 </body>
 </html>
+
